--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "Themes"
   ],
   "scripts": {
-    "build": "npm run build:vscode && npm run build:blink",
+    "build": "npm run build:vscode",
     "build:vscode": "npm run build:vscode:light && npm run build:vscode:dark && vsce package",
     "build:vscode:light": "mustache colours.json templates/vscode/colours-light.mustache.json | mustache - templates/vscode/theme.mustache.json > themes/vscode/glimmerized-light.json",
     "build:vscode:dark": "mustache colours.json templates/vscode/colours-dark.mustache.json | mustache - templates/vscode/theme.mustache.json > themes/vscode/glimmerized-dark.json",
-    "build:blink": "mustache colours.json templates/blink/blink.js > themes/blink/glimmerized.js"
   },
   "devDependencies": {
     "mustache": "^4.0",
