--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "glimmerized",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "A colour theme by Ross Churchley",
   "type": "module",
-  "main": "glimmerized.js",
+  "engines": {
+    "vscode": "^1.98.0"
+  },
   "scripts": {
-    "build": "npm run build:pkg && npm run build:preview",
-    "build:pkg": "esbuild glimmerized.js --bundle --minify --format=esm --outfile=glimmerized.min.js",
-    "build:preview": "esbuild preview/preview.jsx --bundle --outfile=preview/preview.min.js"
+    "build": "npm run build:preview && npm run build:vscode",
+    "build:preview": "esbuild preview/preview.tsx --bundle --outfile=preview/out/preview.min.js && cp preview/preview.{css,html} preview/out/",
+    "build:vscode": "mkdir -p vscode/out && ts-node vscode/theme.ts > vscode/out/glimmerized-color-theme.json && vsce package --out vscode/out/glimmerized.vsix "
   },
   "repository": {
     "type": "git",
@@ -20,12 +22,21 @@
   },
   "homepage": "https://github.com/rchurchley/glimmerized#readme",
   "dependencies": {
-    "culori": "^2.0.0"
+    "@vscode/vsce": "^3.3.0",
+    "apca-w3": "^0.1.9",
+    "culori": "^4.0.1",
+    "esbuild": "^0.25.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "ts-node": "^10.9.2"
   },
-  "devDependencies": {
-    "esbuild": "^0.13.15",
-    "mustache": "^4.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+  "contributes": {
+    "themes": [
+      {
+        "label": "Glimmerized Dark",
+        "uiTheme": "vs-dark",
+        "path": "./vscode/out/glimmerized-color-theme.json"
+      }
+    ]
   }
 }
